<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Tu Yafeng
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="6dp"
    >

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="@dimen/list_icon_size"
        android:layout_height="@dimen/list_icon_size"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_icon"
        android:layout_marginLeft="16dp"
        />

    <TextView
        android:id="@+id/tv_app_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_app_icon"
        tools:text="@string/app_name"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="16dp"
        />

    <TextView
        android:id="@+id/tv_disable_app"
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disable_app"
        app:drawableTint="@color/colorIconTint"
        app:layout_constraintTop_toBottomOf="@id/tv_app_label"
        android:layout_marginTop="12dp"
        app:drawableStartCompat="@drawable/ic_action_disable"
        />

    <TextView
        android:id="@+id/tv_view_in_settings"
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_in_settings"
        app:drawableTint="@color/colorIconTint"
        app:layout_constraintTop_toBottomOf="@id/tv_disable_app"
        app:drawableStartCompat="@drawable/ic_action_system_settings"
        />

    <TextView
        android:id="@+id/tv_view_in_app_market"
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_in_app_market"
        app:drawableTint="@color/colorIconTint"
        app:layout_constraintTop_toBottomOf="@id/tv_view_in_settings"
        app:drawableStartCompat="@drawable/ic_action_app_market"
        />

    <TextView
        android:id="@+id/tv_uninstall"
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uninstall"
        app:drawableTint="@color/colorIconTint"
        app:layout_constraintTop_toBottomOf="@id/tv_view_in_app_market"
        app:drawableStartCompat="@drawable/ic_action_uninstall"
        />

</androidx.constraintlayout.widget.ConstraintLayout>